--- a/lendingV2/index.html
+++ b/lendingV2/index.html
@@ -15,16 +15,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css" media="screen">
     <link rel="stylesheet" href="css/content.css" media="screen">
-    <link rel="stylesheet" href="css/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 <body>
     <header id="header" class="header">
         <div id="borderdiv" class="borderdiv">
             <div class="navbar">
-                <a href="#content">Услуги</a>
+                <a href="#content">Разработка</a>
+                <a href="#contacts">Цены</a>
                 <a href="#news">Примеры</a>
-                <a href="#contacts">Прайс</a>
                 <a href="#contact">Контакты</a>
               </div>
         </div>
@@ -33,22 +32,22 @@
             <p>и не только</p>
         </div>
         <div class="headcontact">
-            <img src="images/icons/tel.png">
+            <p style="width: 70%;">создаем яркие, отзывчивые и гибкие сайты для любых целей с использованием современных веяний</p>
         </div>
     </header>
 
     <div class="cont">
 
-    
+    <h2 class="zag">Этапы разработки</h2>
+
     <div id="content" class="container">
-        <h2>Этапы работы</h2>
         <div class="stepsname">
             <button>составление технического задания</button>
             <button>разработка дизайна</button>
-            <button>разработка пользовательской стороны</button>
-            <button>разработка серверной стороны</button>
+            <button>разработка front-end</button>
+            <button>разработка back-end</button>
             <button>Релиз</button>
-            <button>Поддержка</button>
+            <button>Обучение</button>
         </div>
         <div class="steps">
             <div class="step">
@@ -58,6 +57,11 @@
                     тут написано про всякие мелочи по поводу ТЗ 
                     тут написано про всякие мелочи по поводу ТЗ 
                 </p>
+                <div class="stepsimg">
+                    <img src="images/icons/tel.png" alt="">
+                    <img src="images/icons/telegram.png" alt="">
+                    <img src="images/icons//whatsapp.png" alt="">
+                </div>
             </div>
             <div class="step">
                 <p>тут написано про всякие мелочи по поводу ТЗ 
@@ -66,6 +70,9 @@
                     тут написано про всякие мелочи по поводу ТЗ 
                     тут написано про всякие мелочи по поводу ТЗ 
                 </p>
+                <div class="stepsimg">
+                    <img src="images/icons/figma-682083.png" alt="">
+                </div>
             </div>
             <div class="step">
                 <p>тут написано про всякие мелочи по поводу ТЗ 
@@ -74,6 +81,11 @@
                     тут написано про всякие мелочи по поводу ТЗ 
                     тут написано про всякие мелочи по поводу ТЗ 
                 </p>
+                <div class="stepsimg">
+                    <img src="images/icons/html.png" alt="">
+                    <img src="images/icons/css.png" alt="">
+                    <img src="images/icons/js.png" alt="">
+                </div>
             </div>
             <div class="step">
                 <p>тут написано про всякие мелочи по поводу ТЗ 
@@ -82,6 +94,11 @@
                     тут написано про всякие мелочи по поводу ТЗ 
                     тут написано про всякие мелочи по поводу ТЗ 
                 </p>
+                <div class="stepsimg">
+                    <img src="images/icons/django-13-1175187.png" alt="">
+                    <img src="images/icons/SQL.png" alt="">
+                    <img src="images/icons/python.png" alt="">
+                </div>
             </div>
             <div class="step">
                 <p>тут написано про всякие мелочи по поводу ТЗ 
@@ -90,6 +107,10 @@
                     тут написано про всякие мелочи по поводу ТЗ 
                     тут написано про всякие мелочи по поводу ТЗ 
                 </p>
+                <div class="stepsimg">
+                    <img src="images/icons/hosting.png" alt="">
+                    <img src="images/icons/domainname.png" alt="">
+                </div>
             </div>
             <div class="step">
                 <p>тут написано про всякие мелочи по поводу ТЗ 
@@ -98,11 +119,33 @@
                     тут написано про всякие мелочи по поводу ТЗ 
                     тут написано про всякие мелочи по поводу ТЗ 
                 </p>
+                <div class="stepsimg">
+                    <img src="images/icons/education.png" alt="">
+                </div>
             </div>
         </div>
     </div>
+    <h2 class="zag">Калькулятор цены</h2>
+    <div id="content" class="containertwo">
+        <div class="checkbox">
+            <input class="calccheck" type="checkbox" name="1" value="12">
+            <label for="1">Indigo</label>
+        </div>
+        <div class="checkbox">
+            <input class="calccheck" type="checkbox" name="1" value="12">
+            <label for="1">Indigo</label>
+        </div>
+        <div class="checkbox">
+            <input class="calccheck" type="checkbox" name="1" value="12">
+            <label for="1">Indigo</label>
+        </div>
+        <div class="checkbox">
+            <input class="calccheck" type="checkbox" name="1" value="12">
+            <label for="1">Indigo</label>
+        </div>
+    </div>
 </div>
-           
+
 
 
 </body>
