--- a/hidroisolationV2/index.html
+++ b/hidroisolationV2/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/css/main.css" media="screen">
     <link rel="stylesheet" href="static/css/header.css" media="screen">
+    <link rel="stylesheet" href="static/css/content.css" media="screen">
     <title>Document</title>
 </head>
 <body>
@@ -24,7 +25,52 @@
     </div>
     <div class="header">
         <div class="headercontainer">
+            <h1>Инъекционная гидроизоляция</h1>
+            <p>Полный спектр услуг по инъекционной гидроизоляции!<br>Оперативный выезд! Работаем по официальному договору, 100% гарантия результата!<br>Контроль качества на всех этапах.</p>
+            <a href="#" class="btn">Бесплатная консультация</a>
+            <img src="static/imgs/img/women.png" alt="" class="wom">
+        </div>
+    </div>
+    <div class="besting">
+        <h2>Преимущества работы с нами</h2>
+
+        <div class="bestcontainer">
             
+            <div class="bestitem">
+                <img class="bestimg" src="static/imgs/icons/medal.png" alt="">
+                <h3>Гарантия результата</h3>
+                <p>Если гидроизоляция не сработала (такого не бывало ни разу), приедем и переделаем.</p>
+            </div>
+
+            <div class="bestitem">
+                <img class="bestimg" src="static/imgs/icons/medal.png" alt="">
+                <h3>Бесплатный выезд и расчет</h3>
+                <p>Воспользуйтесь формой обратной связи или позвоните по телефону, чтобы мы отправили вам мастера.</p>
+            </div>
+
+
+            <div class="bestitem">
+                <img class="bestimg" src="static/imgs/icons/medal.png" alt="">
+                <h3>Универсальность</h3>
+                <p>Мы делаем гидроизоляцию на любых объектах и материалах.</p>
+            </div>
+
+
+
+            <div class="bestitem">
+                <img class="bestimg" src="static/imgs/icons/medal.png" alt="">
+                <h3>Прозрачность</h3>
+                <p>Вы знаете все условия сотрудничества и конечную стоимость еще до того, как подпишите договор.</p>
+            </div>
+
+
+
+            <div class="bestitem">
+                <img class="bestimg" src="static/imgs/icons/medal.png" alt="">
+                <h3>Отчетность</h3>
+                <p>Предоставляем отчет по проделанной работе, строго соблюдая сроки и регламент договора.</p>
+            </div>
+
         </div>
 
     </div>
