--- a/hidroisolationV2/index.html
+++ b/hidroisolationV2/index.html
@@ -14,17 +14,17 @@
 <body>
     <div class="nav">
         <div class="navcontainer">
-            <img src="static/imgs/icons/WRS_Logo.png" alt="">
+            <img class="element-animationleft" src="static/imgs/icons/WRS_Logo.png" alt="">
             <div class="menu">
-                <a href="#">Главная</a>
-                <a href="#">Услуги</a>
-                <a href="#">Наши работы</a>
-                <a href="#">Контакты</a>
+                <a class="gain-center" href="#main">Главная</a>
+                <a class="gain-center" href="#servs">Услуги</a>
+                <a class="gain-center" href="#works">Наши работы</a>
+                <a class="gain-center" href="#cont">Контакты</a>
             </div>
-            <a class="telhead" href="tel:8 (926)-677-07-65">8 (926)-677-07-65</a>
+            <a class="telhead gain-center" href="tel:8 (926)-677-07-65">8 (926)-677-07-65</a>
         </div>
     </div>
-    <div class="header">
+    <div id="main" class="header">
         <div class="headercontainer">
             <h1>Инъекционная гидроизоляция</h1>
             <p>Полный спектр услуг по инъекционной гидроизоляции!<br>Оперативный выезд! Работаем по официальному договору, 100% гарантия результата!<br>Контроль качества на всех этапах.</p>
@@ -74,33 +74,33 @@
 
         </div>
     </div>
-    <div class="servises">
+    <div id="servs" class="servises">
         <div class="servisescontainer">
             <h2>Наши услуги</h2>
 
             <div class="servshrefs">
 
-                <a href="" class="servisehref">
+                <a href="" class="servisehref  element-animationleft">
                     <p class="round">1</p>
                     <p class="servname">Аварийное инъектирование подземных помещений (подвал, паркинг)</p>
                 </a>
 
-                <a href="" class="servisehref">
+                <a href="" class="servisehref  element-animationleft">
                     <p class="round">2</p>
                     <p class="servname">Инъектирование стен (монолитных плит перекрытий кирпичных многоквартирных домов)</p>
                 </a>
 
-                <a href="" class="servisehref">
+                <a href="" class="servisehref element-animationleft">
                     <p class="round">3</p>
                     <p class="servname">Инъектирование деформационных швов</p>
                 </a>
 
-                <a href="" class="servisehref">
+                <a href="" class="servisehref element-animationleft">
                     <p class="round">4</p>
                     <p class="servname">Инъектирование бетонных конструкций</p>
                 </a>
 
-                <a href="" class="servisehref">
+                <a href="" class="servisehref element-animationleft">
                     <p class="round">5</p>
                     <p class="servname">Инъектирование инженерных коммуникаций</p>
                 </a>
@@ -109,7 +109,7 @@
             
         </div>
     </div>
-    <div class="besting">
+    <div id="works" class="besting">
         <h2>Наши работы</h2>
         <div class="mediacontent">
             <div class="btnsmedia">
@@ -127,17 +127,17 @@
             </div>
         </div>
 
-        <h2>Контакты</h2>
+        <h2 id="cont" >Контакты</h2>
 
         <div class="contacts">
             <div class="contact">
-                <a class="elementcontact" href="tel:8 (900)-648-26-00"><img src="static/imgs/icons/phone.png" alt="">8 (900)-648-26-00</a>
-                <a class="elementcontact" href="https://telegram.im/@gexarVik" target="_blank"><img src="static/imgs/icons/telegram.png" alt="">8-900-648-26-00</a>
-                <a class="elementcontact" href="https://wa.me/79006482600"><img src="static/imgs/icons/WhatsApp.png" alt="">8-900-648-26-00</a>
+                <a class="elementcontact element-animationleft" href="tel:8 (900)-648-26-00"><img src="static/imgs/icons/phone.png" alt="">8 (900)-648-26-00</a>
+                <a class="elementcontact element-animationleft" href="https://telegram.im/@gexarVik" target="_blank"><img src="static/imgs/icons/telegram.png" alt="">8-900-648-26-00</a>
+                <a class="elementcontact element-animationleft" href="https://wa.me/79006482600"><img src="static/imgs/icons/WhatsApp.png" alt="">8-900-648-26-00</a>
             </div>
             <div class="contact">
 
-                <form action="" class="form-container">
+                <form action="" class="form-container element-animationright">
                     <h3>Оставить заявку</h3>
                     <input type="text" class="smf" placeholder="Введите Ваше имя" required>
                     <input type="tel" class="smf tel" placeholder="Введите Ваш телефон" required>
@@ -195,5 +195,5 @@
     </footer>
 
 </body>
-<script src="js/formreq.js"></script>
+<script src="static/js/show.js"></script>
 </html>
