--- a/hidroisolationV2/index.html
+++ b/hidroisolationV2/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="static/css/main.css" media="screen">
     <link rel="stylesheet" href="static/css/header.css" media="screen">
     <link rel="stylesheet" href="static/css/content.css" media="screen">
@@ -116,14 +117,19 @@
                 <p class="btnmedia activemedia">Видео</p>
                 <p class="btnmedia">Фото</p>
             </div>
-            <div class="mediacontentitem meditemactive">
+            <div class="mediacontentitem">
                 <video class="mediavideo" controls="controls" poster="static/imgs/img/DSC00744.JPG">
                     <source src="" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                     Тег video не поддерживается вашим браузером. 
                    </video>
             </div>
             <div class="mediacontentitem">
-                
+                <span class="prev">&#10094;</span>
+                <img class="slide fade" src="static/imgs/img/DSC00800.JPG" alt="">
+                <img class="slide fade" src="static/imgs/img/DSC00817.JPG" alt="">
+                <img class="slide fade" src="static/imgs/img/DSC00881.JPG" alt="">
+                <img class="slide fade" src="static/imgs/img/DSC00892.JPG" alt="">
+                <span class="next">&#10095;</span>
             </div>
         </div>
 
