--- a/hidroisolationV2/index.html
+++ b/hidroisolationV2/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="static/css/header.css" media="screen">
     <link rel="stylesheet" href="static/css/content.css" media="screen">
     <link rel="stylesheet" href="static/css/footer.css" media="screen">
+    <link rel="stylesheet" href="static/css/mobile.css" media="screen">
     <title>Document</title>
 </head>
 <body>
