--- a/hidroisolationV2/index.html
+++ b/hidroisolationV2/index.html
@@ -46,14 +46,14 @@
             </div>
 
             <div class="bestitem">
-                <img class="bestimg" src="static/imgs/icons/medal.png" alt="">
+                <img class="bestimg" src="static/imgs/icons/bag.png" alt="">
                 <h3>Бесплатный выезд и расчет</h3>
                 <p>Воспользуйтесь формой обратной связи или позвоните по телефону, чтобы мы отправили вам мастера.</p>
             </div>
 
 
             <div class="bestitem">
-                <img class="bestimg" src="static/imgs/icons/medal.png" alt="">
+                <img class="bestimg" src="static/imgs/icons/wall.png" alt="">
                 <h3>Универсальность</h3>
                 <p>Мы делаем гидроизоляцию на любых объектах и материалах.</p>
             </div>
@@ -61,7 +61,7 @@
 
 
             <div class="bestitem">
-                <img class="bestimg" src="static/imgs/icons/medal.png" alt="">
+                <img class="bestimg" src="static/imgs/icons/document.png" alt="">
                 <h3>Прозрачность</h3>
                 <p>Вы знаете все условия сотрудничества и конечную стоимость еще до того, как подпишите договор.</p>
             </div>
@@ -69,7 +69,7 @@
 
 
             <div class="bestitem">
-                <img class="bestimg" src="static/imgs/icons/medal.png" alt="">
+                <img class="bestimg" src="static/imgs/icons/graph.png" alt="">
                 <h3>Отчетность</h3>
                 <p>Предоставляем отчет по проделанной работе, строго соблюдая сроки и регламент договора.</p>
             </div>
